[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buywhere"
version = "0.1.0"
description = "Official Python SDK for the BuyWhere Product Catalog API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "BuyWhere", email = "dev@buywhere.io" }]
keywords = ["buywhere", "ecommerce", "product-catalog", "singapore", "api-client", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest", "pytest-asyncio", "respx", "mypy"]
all = ["langchain-core>=0.1.0"]

[project.urls]
Homepage = "https://buywhere.io"
Documentation = "https://docs.buywhere.io"
Repository = "https://github.com/buywhere/buywhere-py"

[tool.hatch.build.targets.wheel]
packages = ["buywhere"]

[tool.mypy]
strict = true
